--- a/AmmM1/web/M1/bacheca.html
+++ b/AmmM1/web/M1/bacheca.html
@@ -41,7 +41,7 @@
                 <div id="cont2">
                     <!--Uso dell'immagine come principale contenuto del post-->
                     <img title="mcrft" alt="MINECRAFT"
-                         src="mcrft.jpeg" width="350" height="141">
+                         src="mcrft.jpg" width="350" height="141">
                     <p>Troppo bello 'sto gioco!!</p>
                 </div>
             </div>
